--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 DB_USERNAME=rajathgatty253
 DB_PASSWORD=RKfuVrxi467UQBKm
 DB_HOST=cluster0.jd07mja.mongodb.net
+ACCESS_TOKEN_SECRET=3f94b73a-7e7c-4645-a11d-b5e8946cba1f
